# jml

./: .djlintrc  .env.ci  .env.example  .env.orig  .gitignore  .pre-commit-config.yaml  .pythonrc.py  .secrets.baseline  .tool-versions  404.html  Pipfile  Procfile  README.md  conftest.py  docker-compose.utils.yml  docker-compose.yml  index.html  local.env.example  makefile  manage.py  manifest.yml  mkdocs.yml  objects.inv  package-lock.json  package.json  pii-ner-exclude.txt  pii-secret-exclude.txt  pyproject.toml  requirements.txt  setup.cfg  sitemap.xml  sre_message_script.py
.circleci/: config.yml
.copilot/: config.yml  image_build_run.sh
.github/: CODEOWNERS
.github/workflows/: ci.yml  docs.yml  ex.yml
.localstack/init/: buckets.sh
.pii-secret-hook/file_content/: pii-secret-log
.pii-secret-hook/ner/: pii-secret-log
activity_stream/: factories.py  forms.py  models.py  staff_sso.py  urls.py  utils.py  views.py
activity_stream/migrations/: 0001_initial.py  0002_activitystreamstaffssouser_available.py  0003_alter_activitystreamstaffssouser_email_address.py  0004_alter_activitystreamstaffssouser_last_accessed.py  0005_auto_20220705_1032.py  0006_alter_activitystreamstaffssouseremail_staff_sso_user.py  0007_activitystreamstaffssouser_is_active.py  0008_remove_activitystreamstaffssouser_is_active.py  0009_serviceemailaddress.py  0010_activitystreamstaffssouser_uksbs_person_id.py  0011_activitystreamstaffssouseremail_is_primary.py  0012_activitystreamstaffssouser_uksbs_person_id_override.py  0013_activitystreamstaffssouser_employee_numbers.py  0014_activitystreamstaffssouser_service_now_email_address.py  0015_migrate_service_now_email_address.py  0016_auto_20221024_1352.py  0017_alter_activitystreamstaffssouseremail_email_address_and_more.py  0018_remove_activitystreamstaffssouser_service_now_email_address_and_more.py  0019_activitystreamstaffssouser_service_now_user.py  0020_activitystreamstaffssouser_service_now_users.py
activity_stream/tests/: conftest.py  test_utils.py
api/: apps.py  hawk.py  urls.py  views.py
asset_registry/: factories.py  forms.py  models.py  urls.py  utils.py  views.py
asset_registry/migrations/: 0001_initial.py  0002_alter_asset_users.py  0003_auto_20220420_1241.py
asset_registry/templates/: asset_registry_base.html
config/: celery.py  urls.py  wsgi.py
config/settings/: base.py  bdd.py  ci.py  dev.py  local.example.py  local.py  nessus.py  prod.py  test.py
config/test/: conftest.py
core/: __init__.py  api.py  boto_utils.py  celery.py  context_processors.py  forms.py  govuk_components.py  middleware.py  notify.py  tasks.py  types.py  urls.py  utils.py  views.py
core/accessibility/: admin.py  models.py  urls.py  utils.py  views.py
core/activity_stream/: client.py
core/beis_service_now/: admin.py  api.py  authentication.py  factories.py  models.py  serializers.py  types.py  utils.py
core/cookies/: urls.py  views.py
core/feedback/: admin.py  forms.py  models.py  urls.py  views.py
core/health_check/: apps.py  backends.py  urls.py  views.py
core/landing_pages/: urls.py  views.py
core/lsd_help_desk/: __init__.py  interfaces.py
core/lsd_helpdesk/: __init__.py  interfaces.py
core/lsd_zendesk/: __init__.py  interfaces.py
core/people_data/: __init__.py  interfaces.py  routers.py  types.py  utils.py
core/people_finder/: __init__.py  client.py  interfaces.py  person.py  search.py  search_legacy.py  utils.py
core/service_now/: __init__.py  client.py  factories.py  interfaces.py  types.py  utils.py
core/staff_search/: forms.py  urls.py  views.py
core/staff_sso/: __init__.py  interfaces.py
core/templates/: 400.html  403.html  404.html  500.html  base.html  gtm-body.html  gtm-head.html
core/templatetags/: core.py
core/tests/: test_api.py  test_utils_helpers.py  test_utils_pdf.py
core/uksbs/: __init__.py  client.py  interfaces.py  types.py  utils.py
core/utils/: boto.py  es_staff_index.py  helpers.py  hr.py  lsd.py  pdf.py  people_finder.py  service_now.py  slack.py  sre_messages.py  sso.py  staff_index.py  urls.py
dev_tools/: forms.py  middleware.py  urls.py  utils.py  views.py
docker/: Dockerfile.dev  Dockerfile.docs  Dockerfile.localstack  Dockerfile.test  Dockerfile.utils
docs/: e2e-testing.md  emails.md  environment-variables.md  index.md  s3_ingest.md  uksbs.md
docs/technical-documentation/: data-sources.md  emails.md  environment-variables.md  index.md  staff-search.md
e2e-testing/: index.html
e2e_tests/: conftest.py  test_x.py
employee_register/: models.py  urls.py  views.py
employee_register/migrations/: 0001_initial.py
employee_register/templates/: base.html  employee_form.html  employee_list.html  hello.html
leavers/: admin.py  apps.py  client.py  decorators.py  exceptions.py  factories.py  forms.py  helpers.py  models.py  progress_indicator.py  serializers.py  settings.py  tasks.py  types.py  urls.py  utils.py  views.py  widgets.py  workflow.py
leavers/forms/: admin.py  data_processor.py  leaver.py  leaving.py  line_manager.py  security_team.py  sre.py
leavers/migrations/: 0001_initial.py  0002_auto_20211007_1046.py  0002_auto_20211122_1317.py  0002_initial.py  0003_auto_20211007_1058.py  0003_auto_20211019_1547.py  0003_auto_20211122_1511.py  0004_leaver_information.py  0004_leaver_updates.py  0004_leaverinformation.py  0004_leavingrequest_hardware_received.py  0005_reformat_address.py  0006_auto_20211221_1656.py  0007_leaverinformation_add_asuser_and_leavingrequest.py  0008_remove_leavingrequest_leaver_sso_id.py  0009_auto_20220107_1909.py  0010_leavingrequest_data_recipient_activitystream_user.py  0011_leavingrequest_uksbs_pdf_data.py  0012_auto_20220121_1300.py  0013_alter_leavingrequest_security_clearance.py  0014_auto_20220128_1557.py  (+114 more)
nessus/: apps.py  urls.py
requirements/: base.txt  dev.txt  prod.txt
requirements.in/: base.in  dev.in  prod.in
s3_ingest/: index.html
scripts/: ci  entry.sh  pre-commit
search/: search_index.json
setup/: init.sql
technical-documentation/: index.html
user/: admin.py  backends.py  groups.py  models.py
(+291 files in other folders)
