[tool.poetry]
name = "jml"
version = "0.1.0"
description = "Joiners, Movers and Leavers Service"
authors = []
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Celery = "==5.2.7"
crispy-forms-gds = "^0.2.3"
dataclasses-json = "==0.5.7"
django = "^4.1.3"
djangorestframework = "^3.12.4"
django-hawk-drf = "^1.0.0"
django-celery-beat = "^2.2.1"
django-celery-results = "==2.4.0"
django-crispy-forms = "^1.14.0"
django-environ = "^0.8.1"
django-health-check = "==3.16.5"
django-log-formatter-ecs = "^0.0.5"
django-staff-sso-client = "^4.0.1"
django-workflow-engine = "==0.0.21"
django-elasticsearch-dsl = "^7.2.1"
mohawk = "^1.1.0"
psycopg2 = "^2.8.5"
pyjwt = "==2.4.0"
redis = "^4.0.2"
oauthlib = "==3.2.1"
requests-oauthlib = "==1.3.1"
sentry-sdk = "^1.1.0"
slack_sdk = "^3.12.0"
slackclient = "^2.9.3"
waitress = "==2.1.2"
whitenoise = "==5.2.0"
# OpenSearch
opensearch-py = "==1.0.0"
opensearch-dsl = "==1.0.0"
# GovUK Notify
notifications-python-client = "^6.3.0"
help-desk-client = "==0.2.0"
govuk-bank-holidays = "^0.11"


[tool.poetry.group.production]
optional = true

[tool.poetry.group.production.dependencies]
psycogreen = "==1.0.2"
django-audit-log-middleware = "^0.0.4"

[tool.poetry.group.testing]
optional = true

[tool.poetry.group.testing.dependencies]
factory-boy = "^3.2.1"
faker = "^15.1.0"
freezegun = "^1.2.2"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
pytest-django = "^4.5.2"
pytest-xdist = "^3.0.2"
responses = "^0.22.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
django-stubs = "^1.12.0"
flake8 = "^5.0.4"
isort = "^5.10.1"
mypy = "^0.982"
types-certifi = "^2021.10.8.3"
types-freezegun = "^1.1.10"
types-requests = "^2.28.11.2"
types-oauthlib = "^3.2.0"
django-extensions = "^3.2.1"
pygraphviz = "^1.10"
pyparsing = "^3.0.9"
pydot = "^1.4.2"
poetry = "^1.2.2"
bpython = "^0.23"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
src_paths = ["config", "core", "leavers", "user", "activity_stream"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "--ds=config.settings.test --ignore=node_modules"

[tool.mypy]
python_version = "3.9"
plugins = ["mypy_django_plugin.main"]
exclude = ["staticfiles"]

[[tool.mypy.overrides]]
module = [
    "authbroker_client.*",
    "celery.*",
    "crispy_forms_gds.*",
    "django_log_formatter_ecs.*",
    "django_workflow_engine.*",
    "elasticsearch_dsl.*",
    "environ.*",
    "factory.*",
    "health_check.*",
    "help_desk_client.*",
    "mohawk.*",
    "opensearch_dsl.*",
    "requests_hawk.*",
    "requests_oauthlib.*",
    "rest_framework.*",
    "zenpy.*",
]
ignore_missing_imports = true

[tool.django-stubs]
django_settings_module = "config.settings.test"
