[tool.poetry]
name = "jml"
version = "0.1.0"
description = "Joiners, Movers and Leavers Service"
authors = []
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Celery = "==5.2.7"
crispy-forms-gds = "^0.2.3"
dataclasses-json = "==0.5.7"
django = "^4.1.10"
djangorestframework = "^3.12.4"
django-hawk-drf = "1.1.0"
django-celery-beat = "^2.2.1"
django-celery-results = "==2.4.0"
django-crispy-forms = "^1.14.0"
django-environ = "^0.8.1"
django-health-check = "==3.16.5"
django-log-formatter-ecs = "^0.0.5"
django-staff-sso-client = "^4.0.1"
django-elasticsearch-dsl = "^7.2.1"
mohawk = "^1.1.0"
psycopg2 = "^2.8.5"
pyjwt = "==2.4.0"
redis = "^4.5.4"
oauthlib = "==3.2.2"
requests-oauthlib = "==1.3.1"
sentry-sdk = "^1.1.0"
slack_sdk = "^3.12.0"
slackclient = "^2.9.3"
waitress = "==2.1.2"
whitenoise = "==5.2.0"
# OpenSearch
opensearch-py = "==1.0.0"
opensearch-dsl = "==1.0.0"
# GovUK Notify
notifications-python-client = "^6.3.0"
help-desk-client = "==0.2.0"
govuk-bank-holidays = "^0.11"
detect-secrets = "^1.4.0"
dit-activity-stream = "^0.1.0"
django-workflow-engine = "0.2.0"
govuk-frontend-django = "0.3.7"


[tool.poetry.group.production]
optional = true

[tool.poetry.group.production.dependencies]
psycogreen = "==1.0.2"
django-audit-log-middleware = "^0.0.4"

[tool.poetry.group.testing]
optional = true

[tool.poetry.group.testing.dependencies]
factory-boy = "^3.2.1"
faker = "^15.1.0"
freezegun = "^1.2.2"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
pytest-django = "^4.5.2"
pytest-xdist = "^3.0.2"
responses = "^0.22.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.1"
djlint = "*"
black = "*"
django-stubs = "*"
flake8 = "*"
isort = "*"
mypy = "*"
types-certifi = "*"
types-freezegun = "*"
types-requests = "*"
types-oauthlib = "*"
django-extensions = "*"
pydot = "^1.4.2"
bpython = "^0.24"
debugpy = "*"

[tool.poetry.group.docs.dependencies]
mkdocs-material = "^9.1.5"
mkdocs-minify-plugin = "^0.6.4"
mkdocs-redirects = "^1.2.0"
mkdocstrings-python = "^0.9.0"
pillow = "^10.0.1"
cairosvg = "^2.7.0"
mkdocs-tech-docs-template = "^0.0.25"
mkdocs-awesome-pages-plugin = "^2.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
src_paths = ["config", "core", "leavers", "user", "activity_stream"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "--ds=config.settings.test --ignore=node_modules"

[tool.mypy]
python_version = "3.10"
plugins = ["mypy_django_plugin.main"]
exclude = ["staticfiles"]
# check_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "authbroker_client.*",
    "celery.*",
    "crispy_forms_gds.*",
    "django_log_formatter_ecs.*",
    "django_workflow_engine.*",
    "elasticsearch_dsl.*",
    "environ.*",
    "factory.*",
    "govuk_bank_holidays.*",
    "health_check.*",
    "help_desk_client.*",
    "mohawk.*",
    "opensearch_dsl.*",
    "requests_hawk.*",
    "requests_oauthlib.*",
    "rest_framework.*",
    "zenpy.*",
]
ignore_missing_imports = true

[tool.djlint]
profile = "django"
indent = "4"
ignore = "H021,H006"
extend_exclude = "htmlcov,staticfiles,static,node_modules"
custom_blocks = "gds_accordion,gds_accordion_item,gds_breadcrumbs,gds_checkboxes,gds_checkbox_conditional,gds_cookie_banner,gds_cookie_banner_message,gds_error_summary,gds_error_summary_error_list_item,gds_footer,gds_footer_nav,gds_footer_meta,gds_header,gds_header_nav_item,gds_phase_banner,gds_summary_list,gds_summary_list_row,gds_summary_list_row_key,gds_summary_list_row_value,gds_summary_list_row_actions,gds_summary_list_row_actions_item,gds_summary_list_card,gds_summary_list_card_actions,gds_summary_list_card_actions_item,gds_tabs,gds_tabs_tab"

[tool.django-stubs]
django_settings_module = "config.settings.test"

[tool.coverage.run]
omit = ["*/migrations/*", "*/tests/*", "config/*", "dev_tools/*"]

[tool.coverage.report]
exclude_lines = [
    # Have to re-enable the standard pragma
    "pragma: no cover",

    # Don't complain about missing debug-only code:
    "def __repr__",
    "if self\\.debug",

    # Don't complain if tests don't hit defensive assertion code:
    "raise AssertionError",
    "raise NotImplementedError",

    # Don't complain if non-runnable code isn't run:
    "if 0:",
    "if __name__ == .__main__.:",

    # Don't complain about abstract methods, they aren't run:
    "@(abc\\.)?abstractmethod",

    # Exclude type checking blocks
    "if TYPE_CHECKING:",
]
